🎡 휠피커 기본 기능 구현 완료 (중앙 정렬 포함)

--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -87,7 +87,7 @@
 
 				<!-- 다짐 내역 그룹 -->
 				<div class="form_box_g main">
-					<div class="rut_inner">
+					<div class="rout_inner">
 						<!-- 공통 버튼 -->
 						<div class="com_btn">
 							<a href="#none"><img src="https://img.icons8.com/?size=100&id=6N9JHPf2dwXP&format=png&color=000000"><span>설정변경하기</span></a>
@@ -200,7 +200,7 @@
 
 				<!-- 다짐 내역 그룹 -->
 				<div class="form_box_g main off">
-					<div class="rut_inner">
+					<div class="rout_inner">
 						<!-- 공통 버튼 -->
 						<div class="com_btn">
 							<a href="#none"><img src="https://img.icons8.com/?size=100&id=6N9JHPf2dwXP&format=png&color=000000"><span>설정변경하기</span></a>
