--- a/public/policies/privacy.html
+++ b/public/policies/privacy.html
@@ -6,7 +6,7 @@
 <title>한국 개인정보 처리방침 (2025/05 개정)</title>
 <style>
   body{margin:0;background:#fff;color:#222;font-family:-apple-system,BlinkMacSystemFont,"Apple SD Gothic Neo","Noto Sans KR",Segoe UI,Roboto,Helvetica,Arial,"Malgun Gothic",sans-serif}
-  .top{position:sticky;top:0;display:flex;align-items:center;justify-content:center;height:56px;border-bottom:1px solid #eee;background:#fff;z-index:10}
+  .top{position:sticky;top:0;display:flex;align-items:center;justify-content:center;height:56px;border-bottom:1px solid #e6e6e6;background:#fff;z-index:10}
   .top h1{font-size:16px;font-weight:700;margin:0}
   .close{
     position:absolute;right:10px;top:10px;
