--- a/src/assets/html/new_main.html
+++ b/src/assets/html/new_main.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hey, Ruffy!</title>
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/new_main.css">
+</head>
+<body>
+  <div id="main_wrap">
+    <div id="header">
+      <div class="h1">
+        <div class="left">
+          <button class="lnb" @click.prevent="$emit('toggle-lnb')"><span>메뉴열기</span></button>
+        </div>
+        <div class="title">
+          <h1>hey, Ruffy!</h1>
+          <p>하지 말랑 하지말고 그냥 말랑말랑해~</p>
+        </div>
+        <div class="right">
+          <button class="calendar"><span>달력열기</span></button>
+        </div>
+      </div>
+      <div class="ruffys_item">
+        <span class="ruffy01"></span>
+        <span class="ruffy02"></span>
+        <span class="ruffy03"></span>
+        <span class="ruffy04"></span>
+      </div>
+    </div>
+  
+    <div id="main_body">
+    
+    </div>
+  
+  
+  </div>
+</body>
+</html>
 
